Fixed issues where downloads connections would not close after calling cancel.